# gtm-tools

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  hub  pyproject.toml  requirements.txt
.claude/: launch.json
.github/workflows/: ci.yml
apps/competitive-intel/: competitive_intel.py  sample_data.json
apps/discovery/: discovery.py  sample_data.json
apps/enrichment/: enrichment.py  sample_data.json
apps/enrichment/static/: app.js
apps/gateway/: gateway.py
apps/gtm-trends/: gtm_trends.py
apps/icp-scorer/: icp_scorer.py  sample_data.json
apps/icp-scorer/static/: app.js
apps/morning-brief/: CLAUDE.md  brief.py  sample_data.json
apps/morning-brief/static/: app.js
apps/outbound-email/: outbound_email.py  sample_data.json
apps/pipeline/: pipeline.py
apps/pipeline/static/: app.js
apps/playbook/: playbook.py  sample_data.json
apps/prompts/: prompts.py
tests/: conftest.py  test_competitive_intel.py  test_gateway.py  test_outbound_email.py  test_playbook.py
